-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
Appending past last defined component of a file with composite layout leads to an LASSERT() because return of lov_io_layout_at() is not checked:
stripe_width() ASSERTION( index < lsm->lsm_entry_count ) failed
BUG: unable to handle kernel paging request at ffff99d3c2f74030
Call Trace:
lov_stripe_number+0x19/0x40 [lov]
lov_page_init_composite+0x103/0x5f0 [lov]
cl_page_alloc+0x19f/0x660 [obdclass]
cl_page_find+0x1a0/0x250 [obdclass]
ll_write_begin+0x1f7/0xfb0 [lustre]
- duplicates
-
LU-17574 stripe_width() ASSERTION( index < lsm->lsm_entry_count ) failed
-
- Resolved
-